--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,52 +4,115 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 env:
-  NODE_VERSION: '18.x'
-  DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}     # Example: ghcr.io, docker.io, etc.
-  DOCKER_IMAGE: ${{ secrets.DOCKER_IMAGE }}           # Example: your-docker-username/angular-demo
-  REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }} # Username for Docker registry
-  REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }} # Password or token for Docker registry
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  NODE_VERSION: 20
 
 jobs:
-  build-and-test:
+
+  checkout:
+    name: Checkout Code
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
+    outputs:
+      sha: ${{ steps.git-sha.outputs.sha }}
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Use Node.js version from matrix
+      - name: Get commit SHA
+        id: git-sha
+        run: echo "sha=${GITHUB_SHA}" >> $GITHUB_OUTPUT
+
+  setup:
+    name: Setup Node and Install Dependencies
+    runs-on: ubuntu-latest
+    needs: checkout
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Cache node_modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            **/node_modules
-          key: ${{ runner.os }}-node-${{ matrix.node-version }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-${{ matrix.node-version }}-
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Lint
-        run: npm run lint
+      - name: Cache Angular build output
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Restore node_modules cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Run tests
         run: npm test -- --watch=false --browsers=ChromeHeadless
 
+  lint:
+    name: Lint Code
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Restore node_modules cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Run linter
+        run: npm run lint
+
+  build:
+    name: Build Angular App
+    runs-on: ubuntu-latest
+    needs: [test, lint]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Restore node_modules cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
+
       - name: Build Angular app
-        run: npm run build -- --configuration=production
+        run: npm run build -- --configuration production
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -58,64 +121,77 @@ jobs:
           path: dist/
 
   docker:
-    needs: build-and-test
+    name: Build, Scan, and Push Docker Image
     runs-on: ubuntu-latest
-    environment: production
+    needs: build
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Download build artifacts
+      - name: Download Angular build artifacts
         uses: actions/download-artifact@v4
         with:
           name: angular-dist
           path: dist/
 
-      - name: Log in to Docker registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.DOCKER_REGISTRY }}
-          username: ${{ env.REGISTRY_USERNAME }}
-          password: ${{ env.REGISTRY_PASSWORD }}
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Cache Docker layers
-        uses: actions/cache@v4
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          registry: ${{ env.REGISTRY }}
+          username: ${{ secrets.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build Docker image
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      - name: Build and tag Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE }}:${{ github.sha }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          file: ./Dockerfile
+          build-args: |
+            NODE_ENV=production
+          push: false
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Push Docker image (main branch only)
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      - name: Scan Docker image for vulnerabilities
+        uses: aquasecurity/trivy-action@v0.13.1
+        with:
+          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          format: 'table'
+          exit-code: '1'
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+
+      - name: Push Docker image to GHCR
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile
+          build-args: |
+            NODE_ENV=production
           push: true
-          tags: ${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE }}:latest,${{ env.DOCKER_REGISTRY }}/${{ env.DOCKER_IMAGE }}:${{ github.sha }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          labels: ${{ steps.meta.outputs.labels }}
 
-# NOTES & PLACEHOLDERS
-# - Populate repository secrets:
-#   - DOCKER_REGISTRY: Your Docker registry domain (e.g. ghcr.io, docker.io, etc.)
-#   - DOCKER_IMAGE: Docker repository name (e.g. yourusername/angular-demo)
-#   - REGISTRY_USERNAME: Docker registry username or token user
-#   - REGISTRY_PASSWORD: Docker registry password or Personal Access Token
-# - Update the npm scripts if yours differ (e.g., lint, test, build).
-# - This pipeline uses cache for npm install and Docker build layers to speed up builds.
-# - Artifacts from the Angular build step are downloaded in the Docker job for accurate packaging.
-# - Multi-stage Dockerfiles are highly recommended for production builds.
-# - Matrix strategy is defined for flexibility; expand as needed.
+    env:
+      DOCKER_BUILDKIT: 1
+
+# Required secrets (repository or organization level):
+# GHCR_USERNAME - The GitHub username or org name with permission to push to ghcr.io
+# GHCR_TOKEN - A GitHub personal access token with the 'write:packages' and 'read:packages' scopes
