--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,196 +2,121 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-  NODE_VERSION: 20
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-
-  checkout:
-    name: Checkout Code
+  build-test-lint:
+    # Build Matrix for multiple Node.js versions
+    strategy:
+      matrix:
+        node-version: [16.x, 18.x, 20.x]
     runs-on: ubuntu-latest
-    outputs:
-      sha: ${{ steps.git-sha.outputs.sha }}
+    env:
+      NODE_ENV: production
     steps:
+      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Get commit SHA
-        id: git-sha
-        run: echo "sha=${GITHUB_SHA}" >> $GITHUB_OUTPUT
+      # Step 2: Restore npm cache to speed up installs
+      - name: Restore npm cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ matrix.node-version }}-npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-${{ matrix.node-version }}-npm-
 
-  setup:
-    name: Setup Node and Install Dependencies
-    runs-on: ubuntu-latest
-    needs: checkout
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Use Node.js ${{ env.NODE_VERSION }}
+      # Step 3: Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
+          node-version: ${{ matrix.node-version }}
 
+      # Step 4: Install dependencies
       - name: Install dependencies
         run: npm ci
 
-      - name: Cache Angular build output
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
-
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Use Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      - name: Restore node_modules cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Run tests
-        run: npm test -- --watch=false --browsers=ChromeHeadless
-
-  lint:
-    name: Lint Code
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Use Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      - name: Restore node_modules cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
-
-      - name: Run linter
+      # Step 5: Lint codebase
+      - name: Lint project
         run: npm run lint
 
-  build:
-    name: Build Angular App
-    runs-on: ubuntu-latest
-    needs: [test, lint]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      # Step 6: Run unit tests and generate test reports
+      - name: Run tests
+        run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI --code-coverage
 
-      - name: Use Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      - name: Restore node_modules cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node-${{ env.NODE_VERSION }}-${{ hashFiles('**/package-lock.json') }}
-
+      # Step 7: Build Angular app for production
       - name: Build Angular app
-        run: npm run build -- --configuration production
+        run: npm run build -- --configuration=production
 
-      - name: Upload build artifacts
+      # Step 8: Upload build artifacts for usage in later jobs
+      - name: Upload production build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: angular-dist
+          name: angular-dist-${{ matrix.node-version }}
           path: dist/
+          retention-days: 3
 
-  docker:
-    name: Build, Scan, and Push Docker Image
+  docker-build-deploy:
+    needs: build-test-lint
     runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: read
-      packages: write
-
+    # Only run deploy from main branch and Node 20.x (latest recommended)
+    if: github.ref == 'refs/heads/main'
     steps:
+      # Step 1: Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Download Angular build artifacts
+      # Step 2: Download build artifacts from the build job
+      - name: Download production build artifact
         uses: actions/download-artifact@v4
         with:
-          name: angular-dist
+          name: angular-dist-20.x
           path: dist/
 
+      # Step 3: Set up Docker Buildx for advanced Docker features
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GHCR
+      # Step 4: Cache Docker layers for faster builds
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-docker-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-
+
+      # Step 5: Log in to Docker Hub (secrets must be stored in repository settings)
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.GHCR_USERNAME }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-
-      - name: Build and tag Docker image
+      # Step 6: Build and push Docker image with cache and git SHA/tag
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./Dockerfile
-          build-args: |
-            NODE_ENV=production
-          push: false
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Scan Docker image for vulnerabilities
-        uses: aquasecurity/trivy-action@v0.13.1
-        with:
-          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          format: 'table'
-          exit-code: '1'
-          vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
-
-      - name: Push Docker image to GHCR
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          build-args: |
-            NODE_ENV=production
+          file: Dockerfile
           push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:latest,${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:${{ github.sha }}
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+          build-args: |
+            BUILD_PATH=dist/
 
-    env:
-      DOCKER_BUILDKIT: 1
+      # Step 7: Upload Docker image digest as artifact for traceability
+      - name: Upload Docker image digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-image-digest
+          path: ./digest.txt
 
-# Required secrets (repository or organization level):
-# GHCR_USERNAME - The GitHub username or org name with permission to push to ghcr.io
-# GHCR_TOKEN - A GitHub personal access token with the 'write:packages' and 'read:packages' scopes
+      # Step 8: Post-build clean up (optional best practice)
+      - name: Remove dangling Docker images
+        run: |
+          docker image prune -af
