--- a/.github/workflows/angular-build-and-deploy.yml
+++ b/.github/workflows/angular-build-and-deploy.yml
@@ -10,91 +10,60 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: angular-build-and-deploy-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 permissions:
   contents: read
-  id-token: write
 
 jobs:
-  build-and-test:
-    name: Build and Test Angular Application
+  build-and-save-docker:
+    name: Build Angular & Save Docker Image
     runs-on: ubuntu-latest
     timeout-minutes: 20
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js LTS
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
+          node-version: '18'
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run unit tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
-
-      - name: Lint code
-        run: npm run lint
-
       - name: Build Angular app
-        run: npm run build -- --configuration production
-
-  dockerize-and-deploy:
-    name: Dockerize and Deploy
-    runs-on: ubuntu-latest
-    needs: build-and-test
-    timeout-minutes: 20
-    if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
-    env:
-      DOCKER_IMAGE: ghcr.io/${{ github.repository }}:${{ github.sha }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+        run: npm run build -- --output-path=dist
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build Docker image
+        run: docker build -t angular-app:latest .
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: ${{ env.DOCKER_IMAGE }}
+      - name: Save Docker image
+        run: docker save angular-app:latest -o ./angular-app.tar
 
-      # Add further production deployment steps here (e.g., kubectl, SSH, or cloud deploy)
-      # Make sure to inject secrets via repository settings if needed
+      - name: Upload Docker image artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: angular-app
+          path: ./angular-app.tar
 
   codeql-analyze:
-    name: CodeQL Analyze
+    name: CodeQL Analysis
     runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
       security-events: write
-    timeout-minutes: 20
-    if: github.event_name != 'pull_request' || github.event.pull_request.base.ref == 'main'
+    timeout-minutes: 15
+    if: github.event_name != 'workflow_dispatch'
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Initialize CodeQL
