--- a/.github/workflows/angular-build-and-deploy.yml
+++ b/.github/workflows/angular-build-and-deploy.yml
@@ -26,7 +26,6 @@ jobs:
     name: Build Angular Application
     runs-on: ubuntu-latest
     timeout-minutes: 20
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -58,7 +57,7 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' }}
     timeout-minutes: 20
     env:
       IMAGE_NAME: ghcr.io/${{ github.repository }}/angular-app
@@ -81,18 +80,16 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Docker image
-        run: |
-          docker build -t $IMAGE_NAME:$TAG -f Dockerfile .
+        run: docker build -t $IMAGE_NAME:$TAG -f Dockerfile .
 
       - name: Push Docker image
-        run: |
-          docker push $IMAGE_NAME:$TAG
+        run: docker push $IMAGE_NAME:$TAG
 
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: dockerize
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' }}
     timeout-minutes: 15
     steps:
       - name: Deploy to Production Server
@@ -125,6 +122,14 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+
+      - name: Setup Node.js for audit
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install dependencies for audit
+        run: npm ci
 
       - name: Run npm audit
         run: npm audit --production --audit-level=high || true
