--- a/.github/workflows/autodevops-build-and-deploy-angular.yml
+++ b/.github/workflows/autodevops-build-and-deploy-angular.yml
@@ -28,28 +28,21 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-
+          cache: 'npm'
       - name: Install dependencies
         run: npm ci
-
       - name: Run security audit
         run: npm audit --audit-level=high
-
       - name: Run lint
         run: npm run lint
-
       - name: Run unit tests
-        run: npm run test -- --watch=false --browsers=ChromeHeadless
-
+        run: npm run test -- --watch=false --browsers=ChromeHeadless --no-progress --code-coverage
       - name: Build Angular app
         run: npm run build -- --configuration=production
-
       - name: Upload production build as artifact
         uses: actions/upload-artifact@v4
         with:
@@ -67,22 +60,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Download build artifact
         uses: actions/download-artifact@v4
         with:
           name: angular-dist
           path: dist
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -90,7 +79,6 @@ jobs:
           file: Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-demo-docker:${{ github.sha }}
-
       - name: Deploy to server
         id: deploy
         env:
@@ -102,8 +90,8 @@ jobs:
           echo "$DEPLOY_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key $DEPLOY_USER@$DEPLOY_HOST "
             docker pull $DOCKER_IMAGE &&
-            docker stop angular-demo || true &&
-            docker rm angular-demo || true &&
+            (docker stop angular-demo || true) &&
+            (docker rm angular-demo || true) &&
             docker run -d --name angular-demo -p 80:80 $DOCKER_IMAGE
           "
           echo "deployment-url=http://$DEPLOY_HOST/" >> $GITHUB_OUTPUT
@@ -117,16 +105,13 @@ jobs:
       security-events: write
     timeout-minutes: 25
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: javascript
-
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
       - name: Install dependencies
         run: npm ci
-
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
